# node-based-image-processor

./: CMakeLists.txt  GraphEngine.h
include/glad/: glad.h
nodes/: BlurNode.cpp  BlurNode.h  BrightnessContrastNode.h  ColorChannelSplitterNode.h  EdgeDetectionNode.cpp  EdgeDetectionNode.h  ImageInputNode.h  Node.h  OutputNode.h  ThresholdNode.cpp  ThresholdNode.h
src/: glad.c  main.cpp
